src/keyboard_input.cpp
@@ -214,6 +214,7 @@ Window *KeyboardInputRedirection::pickFocus() const
                 return t;
             } while (it != stacking.begin());
         }
+        return nullptr;
     }
 
     if (input()->isSelectingWindow()) {
